tests/baselines/reference/contextualTyping20.errors.txt
tests/cases/compiler/contextualTyping20.ts(1,58): error TS2339: Property 'name' does not exist on type '{ id: number; }'.


==== tests/cases/compiler/contextualTyping20.ts (1 errors) ====
    var foo:{id:number;}[] = [{id:1}]; foo = [{id:1}, {id:2, name:"foo"}];
                                                             ~~~~
!!! error TS2339: Property 'name' does not exist on type '{ id: number; }'.